--- a/MemberZap/Base.lproj/Main.storyboard
+++ b/MemberZap/Base.lproj/Main.storyboard
@@ -17,9 +17,9 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TBb-yj-9Bt">
-                                <rect key="frame" x="94" y="408.66666666666669" width="205" height="35"/>
+                                <rect key="frame" x="98.666666666666686" y="408.66666666666669" width="196" height="35"/>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="Stages of Memberships"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Stages of Membership"/>
                                 <connections>
                                     <action selector="StagesOfMembership:" destination="iq3-DA-WdX" eventType="touchUpInside" id="zqk-qZ-Dq6"/>
                                 </connections>
