--- a/MemberZap/Base.lproj/Main.storyboard
+++ b/MemberZap/Base.lproj/Main.storyboard
@@ -140,35 +140,56 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="f7y-8h-nF4" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="141" id="1mo-wm-a8z"/>
+                            <constraint firstItem="s5H-Er-aOP" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="12" id="2GR-Qc-nIb"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="piS-Ql-jA8" secondAttribute="trailing" constant="141" id="2sz-zl-RbE"/>
+                            <constraint firstItem="upF-h5-7mw" firstAttribute="top" secondItem="9lB-zx-8Q3" secondAttribute="bottom" constant="8" symbolic="YES" id="4aN-og-qEu"/>
                             <constraint firstItem="upF-h5-7mw" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="53" id="4be-ie-das"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="piS-Ql-jA8" secondAttribute="bottom" constant="37" id="4ew-Bh-UU2"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="f7y-8h-nF4" secondAttribute="bottom" constant="65" id="4mf-g6-sHs"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="s5H-Er-aOP" secondAttribute="trailing" constant="84" id="58J-qu-DIk"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="YUP-rE-epm" secondAttribute="trailing" constant="144" id="5WE-9r-2Lr"/>
                             <constraint firstItem="f7y-8h-nF4" firstAttribute="top" secondItem="YUP-rE-epm" secondAttribute="bottom" constant="29" id="6fC-Na-43o"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="YUP-rE-epm" secondAttribute="trailing" constant="144" id="AvC-Gq-KZK"/>
                             <constraint firstItem="9lB-zx-8Q3" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="85" id="CuA-uM-RrT"/>
                             <constraint firstItem="YUP-rE-epm" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="143" id="DHf-RD-w1b"/>
                             <constraint firstItem="s5H-Er-aOP" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="12" id="Dqv-Ha-mTx"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="kLW-bP-IOr" secondAttribute="trailing" constant="130" id="FFK-Vy-KCH"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="s5H-Er-aOP" secondAttribute="trailing" constant="84" id="FSm-MW-ivL"/>
+                            <constraint firstItem="kLW-bP-IOr" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="132" id="Fwj-bx-pct"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="piS-Ql-jA8" secondAttribute="bottom" constant="37" id="Kdt-z2-9fd"/>
+                            <constraint firstItem="9lB-zx-8Q3" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="85" id="LYO-7R-JSX"/>
                             <constraint firstItem="kHr-Nw-TLH" firstAttribute="top" secondItem="s5H-Er-aOP" secondAttribute="bottom" constant="19" id="Lgb-XG-F8R"/>
+                            <constraint firstItem="piS-Ql-jA8" firstAttribute="top" secondItem="kLW-bP-IOr" secondAttribute="bottom" constant="25" id="NrL-Iw-LfE"/>
                             <constraint firstItem="upF-h5-7mw" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="53" id="Ofj-1W-hFW"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="9lB-zx-8Q3" secondAttribute="trailing" constant="68" id="Oxr-hU-e59"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="upF-h5-7mw" secondAttribute="trailing" constant="16" id="PBD-oR-Jom"/>
+                            <constraint firstItem="YUP-rE-epm" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="143" id="PCf-Ky-seZ"/>
                             <constraint firstItem="9lB-zx-8Q3" firstAttribute="top" secondItem="kHr-Nw-TLH" secondAttribute="bottom" constant="20" id="Qgx-DY-4Ut"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="kLW-bP-IOr" secondAttribute="trailing" constant="130" id="RYq-dV-SKF"/>
                             <constraint firstItem="YUP-rE-epm" firstAttribute="top" secondItem="upF-h5-7mw" secondAttribute="bottom" constant="8" symbolic="YES" id="SnC-dg-c0W"/>
                             <constraint firstItem="9lB-zx-8Q3" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="85" id="UAb-jM-W4v"/>
                             <constraint firstItem="piS-Ql-jA8" firstAttribute="top" secondItem="kLW-bP-IOr" secondAttribute="bottom" constant="25" id="VH4-g2-gRl"/>
                             <constraint firstItem="s5H-Er-aOP" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="85" id="WLo-SJ-gI1"/>
                             <constraint firstItem="YUP-rE-epm" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="143" id="X1y-BT-DfD"/>
+                            <constraint firstItem="upF-h5-7mw" firstAttribute="top" secondItem="9lB-zx-8Q3" secondAttribute="bottom" constant="8" symbolic="YES" id="aoW-aA-u4z"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="9lB-zx-8Q3" secondAttribute="trailing" constant="68" id="c7R-6H-TLX"/>
                             <constraint firstItem="YUP-rE-epm" firstAttribute="top" secondItem="upF-h5-7mw" secondAttribute="bottom" constant="8" symbolic="YES" id="fQd-wA-PTW"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="f7y-8h-nF4" secondAttribute="trailing" constant="139" id="fet-y0-QHS"/>
                             <constraint firstItem="kLW-bP-IOr" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="132" id="g9f-g0-4Qb"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="9lB-zx-8Q3" secondAttribute="trailing" constant="68" id="k0F-8B-bR5"/>
+                            <constraint firstItem="9lB-zx-8Q3" firstAttribute="top" secondItem="kHr-Nw-TLH" secondAttribute="bottom" constant="20" id="kaB-Hc-0Pf"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="upF-h5-7mw" secondAttribute="trailing" constant="16" id="kec-FW-rZX"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="kHr-Nw-TLH" secondAttribute="trailing" constant="84" id="ktn-Md-dKH"/>
+                            <constraint firstItem="s5H-Er-aOP" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="85" id="mVP-n1-D83"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="upF-h5-7mw" secondAttribute="trailing" constant="16" id="oGB-dc-KNJ"/>
+                            <constraint firstItem="f7y-8h-nF4" firstAttribute="top" secondItem="YUP-rE-epm" secondAttribute="bottom" constant="29" id="p3W-Zt-4WG"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="kHr-Nw-TLH" secondAttribute="trailing" constant="84" id="pR9-PV-K1s"/>
                             <constraint firstItem="piS-Ql-jA8" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="143" id="qaz-lM-mMk"/>
+                            <constraint firstItem="kHr-Nw-TLH" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="85" id="r5d-5S-Hqu"/>
                             <constraint firstItem="f7y-8h-nF4" firstAttribute="top" secondItem="YUP-rE-epm" secondAttribute="bottom" constant="29" id="tsT-A9-gSB"/>
+                            <constraint firstItem="piS-Ql-jA8" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="143" id="u6C-Pa-XyJ"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="YUP-rE-epm" secondAttribute="trailing" constant="144" id="ufU-fq-dVS"/>
+                            <constraint firstItem="upF-h5-7mw" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="53" id="v3s-Py-kM0"/>
                             <constraint firstItem="upF-h5-7mw" firstAttribute="top" secondItem="9lB-zx-8Q3" secondAttribute="bottom" constant="8" symbolic="YES" id="vXJ-2V-0Yl"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="piS-Ql-jA8" secondAttribute="trailing" constant="141" id="vfk-Ds-rCw"/>
                             <constraint firstItem="kHr-Nw-TLH" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="85" id="zbq-Br-n6v"/>
